# SpikingMotorNeurons

./: README.md  pyproject.toml
src/SpikingMotorNeurons/: __init__.py
src/SpikingMotorNeurons/analysis/: coherence_analysis.py  time_domain_analysis.py
src/SpikingMotorNeurons/utils/: core.py
